# ntsc-demodulator

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  ntsc-demodulator.cabal
app/: Main.hs
src/: DSP.hs
src/NTSC/: Audio.hs  Color.hs  Frame.hs  Signal.hs  Sync.hs  Types.hs
test/: DSPSpec.hs  Spec.hs
test/NTSC/: AudioSpec.hs  ColorSpec.hs  FrameSpec.hs  SignalSpec.hs  SyncSpec.hs  TypesSpec.hs
